--- a/app/components/Report/ChecklistDetail/style.scss
+++ b/app/components/Report/ChecklistDetail/style.scss
@@ -1,21 +1,52 @@
-@import '../../../styles/global-styles';
+@import "../../../styles/global-styles";
 
-.checklistdetail .chart-title{
+.checklistdetail {
+  .checklist-lists {
+    padding: 12px 12px;
+    max-height: 600px;
+    overflow-y: auto;
+    
+  }
+  ::-webkit-scrollbar {
+    width: 12px;
+    border-radius: 4px !important;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.02);
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #c2c2c2;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgba(85, 85, 85, 0.8);
+  }
+  
+}
+
+.checklistdetail .chart-title {
+  opacity: 0.8;
+  color: #000000;
+  font-family: "Noto Sans";
   font-size: 26px;
   letter-spacing: 0;
   line-height: 36px;
-  padding: 40px 40px 0 40px;
-  margin-bottom: 29px;
+  text-align: center;
 }
 
-.checklistdetail .chart-subtitle{
+.checklistdetail .chart-subtitle {
   font-size: 14px;
   font-style: italic;
   letter-spacing: 0;
   line-height: 19px;
   margin-bottom: 32px;
 }
-.checklistdetail .chart-score{
+.checklistdetail .chart-score {
   color: #005979;
   font-family: "Noto Sans";
   font-size: 18px;
@@ -24,26 +55,25 @@
   text-align: right;
 }
 
-
-.checklistdetail .top-item{
-  color: #FF0000;
+.checklistdetail .top-item {
+  color: #ff0000;
   font-weight: bold;
 }
-.checklistdetail .complete-item{
-  opacity: .3;
+.checklistdetail .complete-item {
+  // opacity: .3;
 }
-.checklistdetail .list-title{
-  opacity: 0.8;
+.checklistdetail .list-title {
+  opacity: 0.6;
   color: #000000;
   font-family: "Noto Sans";
   font-size: 18px;
-  font-style: italic;
   letter-spacing: 0;
   line-height: 24px;
+  margin-bottom: 24px;
 }
 
 .checklistdetail .list-title-value {
-  color: #004F6E;
+  color: #004f6e;
   font-family: "Noto Sans";
   font-size: 18px;
   letter-spacing: 0;
@@ -54,30 +84,34 @@
 
 .checklistdetail .list-subtitle {
   opacity: 0.8;
-  font-family: "Noto Sans";
-  font-size: 12px;
-  letter-spacing: 0;
-  line-height: 17px;
-}
-
-.checklistdetail .list-subtitle-value {
-  opacity: 0.8;
+  color: #000000;
   font-family: "Noto Sans";
   font-size: 14px;
   letter-spacing: 0;
   line-height: 19px;
-  text-align: right;
-}
-.checklistdetail .checklist-list{
-  // padding:0 40px 40px 40px;
-}
-.checklistdetail .ssc-divider{
-  margin: 4px 0 25px 0;
-  background-color: #EAEAEA;
+  margin-bottom: 4px;
 }
 
-.checklistdetail .display-text{
-  color: #004F6E;
+.checklistdetail .list-subtitle-value {
+  opacity: 0.8;
+  color: #000000;
+  font-family: "Noto Sans";
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 0;
+  text-align: right;
+  margin-bottom: 4px;
+}
+.checklistdetail .checklist-list {
+  // padding:0 40px 40px 40px;
+}
+.checklistdetail .ssc-divider {
+  margin: 4px 0 25px 0;
+  background-color: #eaeaea;
+}
+
+.checklistdetail .display-text {
+  color: #004f6e;
   font-family: "Noto Sans";
   font-size: 18px;
   font-style: italic;
@@ -85,8 +119,8 @@
   line-height: 24px;
 }
 
-.list-subtitle-no-data{
-  color: #004F6E;
+.list-subtitle-no-data {
+  color: #004f6e;
   font-family: "Noto Sans";
   font-size: 18px;
   font-weight: bold;
@@ -95,7 +129,7 @@
   text-align: right;
 }
 
-.checklistdetail .list-text{
+.checklistdetail .list-text {
   opacity: 0.8;
   color: #000000;
   font-family: "Noto Sans";
@@ -104,15 +138,15 @@
   line-height: 24px;
 }
 
-.checklistdetail .close-button{
+.checklistdetail .close-button {
   padding-top: 0;
 }
-.checklistdetail .close-button:hover{
+.checklistdetail .close-button:hover {
   background-color: unset;
 }
-.max-width-1{
+.max-width-1 {
   // max-width: 600px;
 }
-.max-width-2{
+.max-width-2 {
   // max-width: 692px;
 }
