--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -5,7 +5,15 @@ $ssc-picker-height: 200px;
 .ssc-page {
     background-color: #f5f5f5;
     height: calc(100%);
-    
+    .ssc-title {
+        opacity: 0.8;
+        color: #000000;
+        font-family: "Noto Sans";
+        font-size: 26px;
+        letter-spacing: 0;
+        line-height: 36px;
+    }
+
     .overlay {
         height: calc(100% - #{$ssc-picker-height});
         overflow-y: auto;
@@ -76,13 +84,12 @@ $ssc-picker-height: 200px;
         }
         &.BarChartDetailed,
         &.List,
-        &.BarChart{
+        &.BarChart {
             .MuiCardContent-root {
                 padding: 24px 40px;
             }
         }
     }
-
 
     .InfographicParagraph-1,
     .InfographicParagraph-1 .MuiCardContent-root {
@@ -147,6 +154,9 @@ $ssc-picker-height: 200px;
         text-align: center;
         margin-top: 16px;
         margin-bottom: 8px;
+    }
+    .no-data-tile .body {
+        padding: 120px 0;
     }
 
     .no-data-subtitle {
