https://surgicalsafety.atlassian.net/browse/IPE-59 https://surgicalsafety.atlassian.net/browse/IPE-62 move to right side

--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -12,6 +12,7 @@ $ssc-picker-height: 200px;
         font-size: 26px;
         letter-spacing: 0;
         line-height: 36px;
+        padding-top: 0;
     }
 
     .overlay {
