https://surgicalsafety.atlassian.net/browse/IPE-60 https://surgicalsafety.atlassian.net/browse/IPE-64

--- a/app/components/Report/ItemList/style.scss
+++ b/app/components/Report/ItemList/style.scss
@@ -4,7 +4,11 @@
 .item-list {
   color: #000000;
   .MuiTable-root {
-    border-collapse: separate;
+    // border-collapse: separate;
+    th {
+      border-bottom: unset;
+      box-shadow: 0 1px 2px -1px rgba(0, 0, 0, 0.4);
+    }
   }
   .MuiTableBody-root .MuiTableCell-root {
     border-bottom: unset;
