--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -1,6 +1,6 @@
 @import "../../styles/global-styles.scss";
 
-$ssc-picker-height: 200px;
+$ssc-picker-height: 150px;
 
 .ssc-page {
     background-color: #f5f5f5;
@@ -52,7 +52,7 @@ $ssc-picker-height: 200px;
     }
     .ssc-picker {
         background-color: #e8e8e8;
-        padding: 16px;
+        padding: 8px 0 0 0;
     }
     .ssc-picker-container {
         position: relative;
@@ -161,6 +161,14 @@ $ssc-picker-height: 200px;
         line-height: 19px;
         text-align: center;
         margin-bottom: 24px;
+    }
+    .ssc-settings {
+        position: absolute;
+        top: 30px;
+        right: 44px;
+        a {
+            text-decoration: unset;
+        }
     }
 }
 .sscOnboarding.Modal,
