--- a/app/components/Report/ItemList/style.scss
+++ b/app/components/Report/ItemList/style.scss
@@ -7,7 +7,7 @@
     // border-collapse: separate;
     th {
       border-bottom: unset;
-      box-shadow: 0 1px 2px -1px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 1px 1px -1px rgba(0, 0, 0, 0.4);
     }
   }
   .MuiTableBody-root .MuiTableCell-root {
@@ -22,6 +22,8 @@
   }
   .specialty-col {
     overflow: hidden;
+    cursor: pointer;
+    width: fit-content;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2; /* number of lines to show */
