--- a/app/containers/SSChecklist/SSCOnboardModal/style.scss
+++ b/app/containers/SSChecklist/SSCOnboardModal/style.scss
@@ -10,6 +10,7 @@
     letter-spacing: 0;
     line-height: 19px;
     max-width: 800px;
+    min-height: 633px;
     .sscOnboard-title {
         font-size: 26px;
         letter-spacing: 0;
