--- a/app/components/Report/ReportScore/style.scss
+++ b/app/components/Report/ReportScore/style.scss
@@ -4,7 +4,10 @@
   }
   .goal-slider {
     position: relative;
-    right: -16px;
+    right: -4px;
+    &.has-goal{
+      right:-16px;
+    }
   }
 }
 .ssc-score {
