--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -92,7 +92,6 @@ $ssc-picker-height: 150px;
         }
     }
 
-
     .ssc-card.InfographicParagraph .MuiCardContent-root,
     .ssc-card.MuiCard-root.InfographicParagraph {
         box-shadow: none;
@@ -166,8 +165,13 @@ $ssc-picker-height: 150px;
         position: absolute;
         top: 30px;
         right: 44px;
-        a {
-            text-decoration: unset;
+    }
+    a.link {
+        text-decoration: unset;
+        &.settings {
+            font-size: 18px;
+            letter-spacing: 0;
+            line-height: 24px;
         }
     }
 }
