--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -12,7 +12,7 @@ $ssc-picker-height: 150px;
         font-size: 26px;
         letter-spacing: 0;
         line-height: 36px;
-        padding-top: 0;
+        padding-top: 0 !important;
     }
 
     .overlay {
