--- a/app/components/Report/BarChart/style.scss
+++ b/app/components/Report/BarChart/style.scss
@@ -9,10 +9,7 @@
     line-height: 36px;
   }
   .chart-subtitle {
-    font-size: 14px;
     font-style: italic;
-    letter-spacing: 0;
-    line-height: 19px;
     margin-bottom: 16px !important;
   }
   .chart-score {
@@ -36,9 +33,7 @@
     letter-spacing: 0;
     line-height: 24px;
   }
-  .c3-axis,
-  .c3-axis-y-label,
-  .c3-axis-x-label {
+  .c3-axis {
     font-family: "Noto Sans";
     font-size: 14px;
     letter-spacing: 0;
@@ -66,12 +61,10 @@
     color: #fff;
     padding: 16px;
     text-align: left;
-    font-size: 14px;
     max-width: 300px;
     word-wrap: break-word;
     font-family: "Noto Sans";
     font-weight: 500 !important;
-    line-height: 19px;
     border-radius: 4px;
     background-color: rgba(97, 97, 97, 0.9);
   }
