--- a/app/containers/EMMReports/style.scss
+++ b/app/containers/EMMReports/style.scss
@@ -20,7 +20,7 @@ $onboardwidth: 875px;
         line-height: 36px;
         margin: 0px 0px 40px;
     }
-    .title-p { font-size: 14px; margin-bottom: 16px; }
+    .title-p { margin-bottom: 16px; }
     h2, .title-p { text-align: center; }
     .content-container {
         margin: 0 auto;
@@ -60,11 +60,6 @@ $onboardwidth: 875px;
         padding: 16px;
     }
     h2 {
-        opacity: 0.8;
-    }
-    .confirm-publish-text {
-        font-size: 14px;
-        color: black;
         opacity: 0.8;
     }
     .cancel-publish {
@@ -109,8 +104,6 @@ $onboardwidth: 875px;
         position: absolute;
         top: 24px;
         right: 40px;
-        font-size: 14px;
-        color: #000;
         z-index: 99;
     }
     .main-text {
@@ -136,8 +129,6 @@ $onboardwidth: 875px;
     .onboarding-open {
         top: 86px;
         cursor: pointer;
-        font-size: 14px;
-        line-height: 19px;
         color: #4EA1DA;
         &:hover { text-decoration: underline; }
     }
