--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -25,22 +25,6 @@ $ssc-picker-height: 150px;
         font-size: 26px;
         line-height: 36px;
     }
-    .QualityScoreReport {
-        .BarChart {
-            padding: 0 80px 0 0;
-            .chart-title {
-                font-family: "Noto Sans";
-                font-size: 18px;
-                font-weight: bold;
-                letter-spacing: 0;
-                line-height: 24px;
-                margin-bottom: 0px !important;
-            }
-            .chart-subtitle {
-                display: none;
-            }
-        }
-    }
 
     .ssc-divider {
         background-color: #c8c8c8;
@@ -117,13 +101,6 @@ $ssc-picker-height: 150px;
         line-height: 36px;
         text-align: center;
     }
-    .ssc-message-subtitle {
-        font-family: "Noto Sans";
-        font-size: 18px;
-        letter-spacing: 0;
-        line-height: 24px;
-        text-align: center;
-    }
 
     .ssc-chart-title {
         font-size: 26px;
@@ -131,17 +108,6 @@ $ssc-picker-height: 150px;
         line-height: 36px;
     }
 
-    .no-data {
-        opacity: 0.8;
-        color: #000000;
-        font-family: "Noto Sans";
-        font-size: 18px;
-        letter-spacing: 0;
-        line-height: 24px;
-        text-align: center;
-        margin-top: 16px;
-        margin-bottom: 8px;
-    }
     .no-data-tile .body {
         padding: 120px 0;
     }
@@ -153,11 +119,7 @@ $ssc-picker-height: 150px;
     }
     a.link {
         text-decoration: unset;
-        &.settings {
-            font-size: 18px;
-            letter-spacing: 0;
-            line-height: 24px;
-        }
+        color: #028cc8;
     }
 }
 
