https://surgicalsafety.atlassian.net/browse/IPE-116 Add styling for the legend wrapping div to DonutChart's stylesheet

--- a/app/components/Report/DonutChart/style.scss
+++ b/app/components/Report/DonutChart/style.scss
@@ -10,6 +10,11 @@
     line-height: 36px;
     text-align: center;
   }
+  .donut-chart-detailed-legend-container {
+    display: 'flex';
+    flex-direction: column;
+    align-items: 'flex-start';
+  }
   .donut-chart-detailed-legend {
     display: flex;
     margin-top: 32px;
