--- a/app/components/Report/DonutChart/style.scss
+++ b/app/components/Report/DonutChart/style.scss
@@ -20,6 +20,7 @@
     margin-top: 32px;
     flex-direction: column;
     margin-left: 16px;
+    min-height: 308px;
   }
   .legend-title {
     display: flex;
