https://surgicalsafety.atlassian.net/browse/IPE-116 Update CSS ruleset for .efficiency .donut-chart to padding-bottom: 24px

--- a/app/containers/Efficiency/style.scss
+++ b/app/containers/Efficiency/style.scss
@@ -46,7 +46,7 @@ $ssc-picker-height: 150px;
             font-style: unset;
         }
         .donut-chart {
-            margin-bottom: 44px;
+            padding-bottom: 24px;
         }
     }
     .firstCaseOnTimeStart {
