--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -1,33 +1,23 @@
 @import "../../styles/global-styles.scss";
-.case {
-    div {
-        margin-bottom: 18px;
-    }
-    .title {
-        font-family: Helvetica;
-        font-size: 32px;
-        line-height: 37px;
-        color: #004f6e;
-        opacity: 0.8;
-    }
-    .subtitle {
-        font-family: Helvetica;
-        font-weight: bold;
-        font-size: 18px;
-        line-height: 21px;
-        color: #323232;
-        opacity: 0.8;
-    }
-    .description {
+
+
+.case-discovery-grid {
+    // max-width: 1198px;
+    // margin: auto !important;
+    .header,
+    .header-label {
         font-family: Helvetica;
         font-size: 16px;
-        line-height: 18px;
-        color: #323232;
         opacity: 0.8;
+        line-height: 18px;
+        color: #919191;
+        margin: auto 0;
     }
-    margin-bottom: 38px;
-}
-.case-discovery-grid {
+    .header {
+        margin-bottom: 24px;
+        display: flex;
+        justify-content: space-between;
+    }
     .filters {
         max-width: 360px;
     }
@@ -46,10 +36,10 @@
         font-size: 16px;
         line-height: 18px;
         white-space: nowrap;
-        span{
+        span {
             display: inline-flex;
         }
-        .display{
+        .display {
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
@@ -61,6 +51,52 @@
             cursor: pointer;
             padding-top: 2px;
             margin-left: 4px;
+        }
+    }
+
+    .case {
+        div:not(:last-child) {
+            margin-bottom: 18px;
+        }
+        .title {
+            font-family: Helvetica;
+            font-size: 32px;
+            line-height: 37px;
+            color: #004f6e;
+            opacity: 0.8;
+        }
+        .subtitle {
+            font-family: Helvetica;
+            font-weight: bold;
+            font-size: 18px;
+            line-height: 21px;
+            color: #323232;
+            opacity: 0.8;
+        }
+        .description {
+            font-family: Helvetica;
+            font-size: 16px;
+            line-height: 18px;
+            color: #323232;
+            opacity: 0.8;
+        }
+        margin-bottom: 38px;
+        .tags {
+            display: inline-block;
+            margin: 0 -4px;
+        }
+        .case-tag {
+            border-radius: 8px;
+            background-color: #d8f0f9;
+            color: #004f6e;
+            opacity: 0.8;
+            padding: 6px;
+            margin: 0 4px;
+            display: inline-block;
+            font-family: Helvetica;
+            font-size: 16px;
+            line-height: 18px;
+            white-space: nowrap;
         }
     }
 }
