--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -18,19 +18,27 @@
         display: flex;
         justify-content: space-between;
     }
-    .include-toggle{
-        margin-top: 12px;
-        color: #323232 !important;
-        .include-label{
-            font-family: Helvetica;
-            font-size: 16px;
-            line-height: 18px;
-            opacity: .8;
-            color: #323232;
-        }
-    }
+    
     .filters {
         max-width: 360px;
+        .custom-dates{
+            display: flex;
+            justify-content: space-between;
+            .start-date{
+                margin-right: 8px;
+            }
+        }
+        .include-toggle{
+            margin-top: 12px;
+            color: #323232 !important;
+            .include-label{
+                font-family: Helvetica;
+                font-size: 16px;
+                line-height: 18px;
+                opacity: .8;
+                color: #323232;
+            }
+        }
     }
     .tags {
         margin: 4px -4px;
