--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -1,6 +1,11 @@
 @import "../../styles/global-styles.scss";
+section.case-discovery{
+    overflow-y: hidden;
+    padding-top: 20px;
+    padding-right:20px;
+}
 
-.case-discovery-grid {
+.case-discovery-search {
     // max-width: 1198px;
     // margin: auto !important;
     .header,
@@ -16,10 +21,15 @@
         margin-bottom: 24px;
         display: flex;
         justify-content: space-between;
-        margin-top: 9px;
+        margin-top: 29px;
+    }
+    .cases{
+        overflow-y: auto;
+        max-height: 100vh;
     }
 
     .filters {
+        margin-top: 20px;
         max-width: 360px;
         .select-header {
             display: flex;
@@ -87,6 +97,10 @@
             line-height: 37px;
             color: #004f6e;
             opacity: 0.8;
+            cursor: pointer;
+            &:hover{
+                text-decoration: underline;
+            }
         }
         .subtitle {
             font-family: Helvetica;
@@ -102,6 +116,12 @@
             line-height: 18px;
             color: #323232;
             opacity: 0.8;
+            span {
+                margin: 0 6px;
+                &:first-child {
+                    margin: 0 6px 0 0;
+                }
+            }
         }
         margin-bottom: 38px;
         .tags {
@@ -152,5 +172,18 @@
             color: #323232;
             opacity: 0.8;
         }
+    }
+}
+
+.case-discovery-detailed {
+    .back {
+        font-family: Helvetica;
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 21px;
+        color: #323232;
+
+        opacity: 0.8;
+        cursor: pointer;
     }
 }
