--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -1,8 +1,8 @@
 @import "../../styles/global-styles.scss";
 section.case-discovery{
-    overflow-y: hidden;
+    overflow: hidden;
     padding-top: 20px;
-    padding-right:20px;
+    padding-right:0px;
 }
 
 .case-discovery-search {
@@ -18,14 +18,21 @@ section.case-discovery{
         margin: auto 0;
     }
     .header {
-        margin-bottom: 24px;
+        // padding-bottom: 12px;
+        // margin-bottom: 12px;
         display: flex;
         justify-content: space-between;
         margin-top: 29px;
+        padding-right: 40px;
+        border-bottom: 1px solid #F3F3F3;
     }
     .cases{
         overflow-y: auto;
-        max-height: 100vh;
+        max-height: calc(100vh - 87px);
+        padding-top: 24px;
+        padding-right: 40px;
+        padding-bottom: 0;
+        height: 100%;
     }
 
     .filters {
@@ -98,6 +105,7 @@ section.case-discovery{
             color: #004f6e;
             opacity: 0.8;
             cursor: pointer;
+            width: fit-content;
             &:hover{
                 text-decoration: underline;
             }
